infra/dev/k8s/logs/portainer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - dev-log.egg.one
    secretName: portainer-tls
  rules:
  - host: dev-log.egg.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port: 
              number: 9443
